--- a/src/components/Main-Section.css
+++ b/src/components/Main-Section.css
@@ -18,7 +18,7 @@
 }
 
 .send-container{
-    width: 57vw;
+    width: 56vw;
     height: 10vh;
     display: flex;
     justify-content: center;
@@ -35,9 +35,10 @@
 @media only screen and (max-width: 480px) {
 
     #messenger{
-        width: 70vw;
-        height: 90vh;
-        padding: 4%;
+        width: 60vw;
+
+        padding: 10%;
+        margin-top: 10rem;
         height: auto;
     }
 
