--- a/src/partials/Left-Menu-Bar.css
+++ b/src/partials/Left-Menu-Bar.css
@@ -73,7 +73,7 @@
 @media only screen and (max-width: 480px) { 
 
   #sidebar{
-    width: 20vw;
+    width: 3vw;
     height: 100vh;
   }
 
@@ -82,6 +82,9 @@
     height: 60px;
   }
   .contact-name {
+    display: none;
+  }
+  #contact-name {
     display: none;
   }
   .contact-msg {
