--- a/src/partials/Menu-Bar.css
+++ b/src/partials/Menu-Bar.css
@@ -36,6 +36,20 @@
     margin-top: 5px;
 }
 
+#menu-bar2
+{
+    width: 100%;
+    background-color: white;
+    position: fixed;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    top: 0px;
+    z-index: 1;
+    animation: FADE-IN 1s ease-in 0s 1;
+
+}
+
 @keyframes FADE-IN {
     0% {
       opacity: 0%;
@@ -52,11 +66,19 @@
     #menu-bar{
       display: none;
     }
+
+    #menu-bar2{
+      display: flex;
+    }
   }
 
   @media only screen and (max-width: 480px) { 
 
     #menu-bar{
       display: none;
+    }
+
+    #menu-bar2{
+      display: flex;
     }
   }
